--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
     "react-bootstrap-icons": "^1.11.5",
